adjusting position of home button in nav as it was interfering with content on many pages. Project upload templates - reworking switch buttons so they are visible on each page, and aadjusting default so that it defaults to the first project upload template. Styling and positioning. Reworking Project page and project upload pages so the nav margins are correct.

--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -14,7 +14,7 @@
 .homeLink{
     position: absolute;
     top: 10vh;
-    left: 20vw;
+    left: 12vw;
     width: 20px;
     height: 170px;
 
