--- a/client/src/components/pages/ProjectUpload/ProjectUpload.css
+++ b/client/src/components/pages/ProjectUpload/ProjectUpload.css
@@ -32,6 +32,12 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+.selectContainer{
+    display: flex;
+    justify-content: space-evenly;
+}
+
 .name-flex {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -302,6 +308,24 @@
     text-transform: uppercase;
     text-align: center;
     
+}
+
+.custom-file-upload5 {
+    border: 1px solid;
+    border-color: black;
+    padding: 30% 40%;
+    cursor: pointer;
+    background-color: white;
+    z-index: 0;
+    display: block;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100%;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+    text-transform: uppercase;
+    text-align: center;
 }
 
 .upload-image-button{
