--- a/client/src/components/pages/SignUp/SignUp.css
+++ b/client/src/components/pages/SignUp/SignUp.css
@@ -75,6 +75,11 @@
     color: #9A9A9A;
 }
 
+.layoutButtons {
+    position: relative;
+    top: 5vh;
+}
+
 .submit-button {
     border-radius: 30px;
     border-style: solid;
